changing learning path

--- a/pre/index.pug
+++ b/pre/index.pug
@@ -56,83 +56,56 @@ html(lang='en')
 								| HTML
 						#collapseOne.accordion-collapse.collapse(aria-labelledby='headingOne' data-bs-parent='#accordionExample')
 							.accordion-body
-								strong This is the first item's accordion body.
-								|  It is shown by
-								|         default, until the collapse plugin adds the appropriate classes that we
-								|         use to style each element. These classes control the overall appearance,
-								|         as well as the showing and hiding via CSS transitions. You can modify
-								|         any of this with custom CSS or overriding our default variables. It's
-								|         also worth noting that just about any HTML can go within the
-								code .accordion-body
-								| , though the transition does limit overflow.
+								ul
+									li: strong Formularios 
+									li Videos 
+									li Tables 
+									li: strong Divs 
+									li Audios
 					.accordion-item
 						h2#headingTwo.accordion-header
 							button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapseTwo' aria-expanded='false' aria-controls='collapseTwo')
 								| CSS
 						#collapseTwo.accordion-collapse.collapse(aria-labelledby='headingTwo' data-bs-parent='#accordionExample')
 							.accordion-body
-								strong This is the second item's accordion body.
-								|  It is hidden
-								|         by default, until the collapse plugin adds the appropriate classes that
-								|         we use to style each element. These classes control the overall
-								|         appearance, as well as the showing and hiding via CSS transitions. You
-								|         can modify any of this with custom CSS or overriding our default
-								|         variables. It's also worth noting that just about any HTML can go within
-								|         the 
-								code .accordion-body
-								| , though the transition does limit
-								|         overflow.
+								ul 
+									li Unidades 
+									li Fuentes externas 
+									li Z-index 
+									li Overflow
+									li: strong Position 
+									li: strong Pseudo elementos
+									li Colores
+									li: strong Display
+									li Float
+									li: strong Flexbox
+									li: strong Grid
+									li Animation
+									li Transition
+									li Background
+									li Filtros
+									li Outline
 					.accordion-item
 						h2#headingThree.accordion-header
 							button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapseThree' aria-expanded='false' aria-controls='collapseThree')
 								| JS
 						#collapseThree.accordion-collapse.collapse(aria-labelledby='headingThree' data-bs-parent='#accordionExample')
 							.accordion-body
-								strong This is the third item's accordion body.
-								|  It is hidden
-								|         by default, until the collapse plugin adds the appropriate classes that
-								|         we use to style each element. These classes control the overall
-								|         appearance, as well as the showing and hiding via CSS transitions. You
-								|         can modify any of this with custom CSS or overriding our default
-								|         variables. It's also worth noting that just about any HTML can go within
-								|         the 
-								code .accordion-body
-								| , though the transition does limit
-								|         overflow.
+								//- Contenido
 					.accordion-item
-						h2#headingThree.accordion-header
-							button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapseThree' aria-expanded='false' aria-controls='collapseThree')
+						h2#headingFour.accordion-header
+							button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapseFour' aria-expanded='false' aria-controls='collapseFour')
 								| SCSS
-						#collapseThree.accordion-collapse.collapse(aria-labelledby='headingThree' data-bs-parent='#accordionExample')
+						#collapseFour.accordion-collapse.collapse(aria-labelledby='headingFour' data-bs-parent='#accordionExample')
 							.accordion-body
-								strong This is the third item's accordion body.
-								|  It is hidden
-								|         by default, until the collapse plugin adds the appropriate classes that
-								|         we use to style each element. These classes control the overall
-								|         appearance, as well as the showing and hiding via CSS transitions. You
-								|         can modify any of this with custom CSS or overriding our default
-								|         variables. It's also worth noting that just about any HTML can go within
-								|         the 
-								code .accordion-body
-								| , though the transition does limit
-								|         overflow.
+								//- Contenido
 					.accordion-item
-						h2#headingThree.accordion-header
-							button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapseThree' aria-expanded='false' aria-controls='collapseThree')
+						h2#headingFive.accordion-header
+							button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapseFive' aria-expanded='false' aria-controls='collapseFive')
 								| PUG
-						#collapseThree.accordion-collapse.collapse(aria-labelledby='headingThree' data-bs-parent='#accordionExample')
+						#collapseFive.accordion-collapse.collapse(aria-labelledby='headingFive' data-bs-parent='#accordionExample')
 							.accordion-body
-								strong This is the third item's accordion body.
-								|  It is hidden
-								|         by default, until the collapse plugin adds the appropriate classes that
-								|         we use to style each element. These classes control the overall
-								|         appearance, as well as the showing and hiding via CSS transitions. You
-								|         can modify any of this with custom CSS or overriding our default
-								|         variables. It's also worth noting that just about any HTML can go within
-								|         the 
-								code .accordion-body
-								| , though the transition does limit
-								|         overflow.
+								//- Contenido
 			//- work
 			#tarea.container.pt-4
 				h4 Tarea
