--- a/pre/style.scss
+++ b/pre/style.scss
@@ -16,6 +16,29 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba($color: #000000, $alpha: 0.65);
+  background-color: #ffb4bf;
+  opacity: 0.3;
  }
+}
+.navbarSticky__a {
+ color: darken(#ffb4bf, 10);
+}
+.navbarSticky__a:hover {
+ color: darken(#ffb4bf, 30);
+}
+.nav-pills .nav-link.active {
+ background-color: darken(#ffb4bf, 10);
+}
+.accordion-button:not(.collapsed) {
+ color: darken(#ffb4bf, 10);
+ background-color: lighten(#ffb4bf, 10);
+}
+
+.btn-primary {
+ background-color: darken(#ffb4bf, 10);
+ border-color: darken(#ffb4bf, 20);
+}
+.btn-primary:hover {
+ background-color: darken(#ffb4bf, 15);
+ border-color: darken(#ffb4bf, 25);
 }
